Corrected an overflowing object at the person-selector class

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -101,11 +101,11 @@ body{
 }
 
 .blue-bg{
-    background-color: #cc00ff;
+    background-color: #0084ff;
 }
 
 .gray-bg{
-    background-color: #3d5365;
+    background-color: #ff0000;
 }
 
 .chat-input-form{
